# poetry

./: New Text Document.txt  README.md
python/: class02.ipynb  class02.py
todo_db/todo_api/: Dockerfile.dev  pyproject.toml
todo_db/todo_api/.devcontainer/: devcontainer.json
todo_db/todo_api/todo_api/: main.py  settings.py
todo_server/: .env  Dockerfile.dev  pyproject.toml
todo_server/tests/: test_main.py
todo_server/todo_server/: main.py  settings.py
