[tool.poetry]
name = "todo-api"
version = "0.1.0"
description = ""
authors = ["shaqas86 <shaqas.shahid@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
unicorn = {extras = ["standard"], version = "^2.0.1.post1"}
uvicorn = {extras = ["standard"], version = "^0.28.1"}
sqlmodel = "^0.0.16"
psycopg = {extras = ["binary"], version = "^3.1.18"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
